# piBLOOM

./: .gitignore  README.md  commands.md  docker-compose.yml  pyproject.toml
kubernetes/: convert-compose.bash  pibloom-ingress.yaml
pibloom/: app.py  model.py
pibloom_api/: .dockerignore  Dockerfile  config.yml  pyproject.toml
pibloom_api/model/: README.txt
pibloom_api/pibloom/: app.py  model.py
pibloom_api/tests/: test_pibloom.py
pibloom_proxy/: Dockerfile  default.conf
pibloom_web/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
pibloom_web/server/: nginx.config  server.js
pibloom_web/src/: App.vue  main.js
pibloom_web/src/assets/: main.css
pibloom_web/src/components/: HelloWorld.vue
pibloom_web/src/views/: AboutView.vue  HomeView.vue
tests/: test_pibloom.py
