[tool.poetry]
name = "piBLOOM_api"
version = "0.1.0"
license = "MIT"
description = "A API for serving the BLOOM model via a Raspberry Pi cluster"
authors = ["danczw <dev.dc@pm.me>"]
repository = "https://github.com/danczw/piBLOOM"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
transformers = {extras = ["torch"], version = "^4.21.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
